finnally fixed grid and overflow tree

--- a/src/app/editorpage/editorpage.component.scss
+++ b/src/app/editorpage/editorpage.component.scss
@@ -17,25 +17,27 @@
 
 // }
 
-.grid{
+.grid {
   min-height: 100%;
   width: 100%;
-  margin: 0;
+  margin: 0 auto 0 auto;
   //max-height: 100%;
 }
 
 
-#toolbar{
+
+#toolbar {
   padding: 20px;
   background-color: #23272a;
   max-height: 70px !important;
   width: 100%;
 }
 
-#button-col{
+#button-col {
 
   text-align: center;
   width: 100%;
+  height: 100%;
 
   //fix vertical alingnmen
 
@@ -44,56 +46,65 @@
 
 
 
-button{
+button {
   margin-left: 20px;
 }
 
-#editor-grid{
+// #editor-grid {
 
-  // display: flex !important;
-  // flex-direction: column !important;
-  padding: 20px !important;
-  height: 100%;
-  width: 100;
+//   // display: flex !important;
+//   // flex-direction: column !important;
+//   padding: 20px !important;
+//   height: 100%;
+//   width: 100%;
 
-  //height: 10000px !important;
-
-
-
-  // height: 200px !important;
-
-
-  // might remove padding
-
-}
+//   //height: 10000px !important;
 
 
 
-
-.ui-tree {
-
-    color: #ffffff !important;
-    //padding: 0.571em 1em !important;
-    background-color: #23272a !important;
-
-}
-
-#codeeditor{
-  //height: 650px !important;
-  max-height: 100%;
-}
-
-.CodeMirror{
-  //height: auto !important;
-}
-
-#inner-grid{
-  height: 100%;
-}
+//   // height: 200px !important;
 
 
+//   // might remove padding
 
-// #tree{
-//   overflow: auto;
 // }
+
+
+
+
+
+
+#codeeditor {
+  //height: 650px !important;
+  //height: 660px !important;
+}
+
+// .CodeMirror {
+//   height: 660px !important;
+//   width: 0;
+// }
+
+// #inner-grid{
+//   // height: 100% !important;
+//   // margin: 0 !important;
+//   // width: 100% !important;
+//   // padding: 0 !important;
+
+//   height: 100%;
+//   width: 100%;
+//   margin: 0 auto 0 auto;
+// }
+
+
+
+#tree{
+  overflow: auto;
+
+}
+
+#file-col{
+  height: 600px !important;
+  overflow: auto !important;
+  background-color: #23272a;
+}
 
